Can't really squeeze much more out of this without butchering the logic, but we've made the ability-display not calculate readiness for the non-selected abilities unless they're at least visible.

--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -129,12 +129,14 @@
 			map(graphic_cells, [
 				set(value.mid_x, mid_x),
 				set(value.mid_y, mid_y),
+				set(value.alpha, 0),
 			]),
 			add_object(overlay),
 			add_object(super_indicator),
 			set(super_indicator.parent, graphic),
 			set(overlay.parent, graphic)
 			;
+			set(graphic.alpha, 255),
 			set(super_indicator.relative_x, 0),
 			set(super_indicator.relative_y, 0),
 			set(overlay.relative_x, 0),
@@ -166,7 +168,9 @@
 					if(has_just_changed,
 						set_to_animation(value, item_info(index).hud_img_rect ),
 					),
-					set(value.brightness, 255/if( is_this_ability_enabled(index), 1, 3) ),
+					if(value.alpha > 0, //the ability-enabled calc is expensive; only run it if the graphic is displayed
+						set(value.brightness, 255/if( is_this_ability_enabled(index), 1, 3) ),
+					)
 				]),
 				
 				set(si_uniforms.speed, if(is_this_ability_enabled(0), 0.012, 0.004)),
