--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -694,13 +694,20 @@ properties: {
 		has_super_pendant_for_ability(current_ability)
 	",
 
+
+	_has_super_pendant_for_ability_cache: { type: "object", init: "create_cache({name: 'has_super_pendant_for_ability_cache'})" },
+	
 	has_super_pendant_for_ability: "def(InventoryItemType regular_ability) -> bool
-		if(super_version != null,
-			has_item(super_version),
-			false
-		)
-		where super_version = super_ability_that_corresponds_to_this_regular_ability( regular_ability )
-	",
+		query_cache(
+			_has_super_pendant_for_ability_cache,
+			items_carried,
+			if(super_version != null,
+				has_item(super_version),
+				false
+			)
+			where super_version = super_ability_that_corresponds_to_this_regular_ability( regular_ability )
+		)",	
+
 
 	super_ability_that_corresponds_to_this_regular_ability: "def(InventoryItemType regular_ability) -> InventoryItemType | null
 		switch(me.item_info(regular_ability).item_element_type,
