Added markup and some basic tiles for a seaside background parallax wall.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -426,6 +426,24 @@ iel,iel,iel",
 		},
 	},
 
+/*-------------------------------------- seaside house interiors (new) --------------------------------------*/
+		/*------ background parallax walls ------*/
+	{
+		category: "interior, seaside",
+		type: "ibw",
+		zorder: "background_parallax_walls",
+		x_speed: 105,
+		preview: {
+			zorder: 0,
+			tiles: "ibw,ibw,ibw,
+					ibw,ibw,ibw
+					ibw,ibw,ibw",
+		},
+	},
+
+
+/*-------------------------------------- forest house interiors (new) --------------------------------------*/
+
 	#forest interior solid wall
 	{
 		category: "interior",
