--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -63,6 +63,7 @@ iss: "interiors.png_MTP_walls.cfg",
 iel: "interior-elevators.png_MTP.cfg",
 ieh: "interior-elevators.png_MTP_horizontal.cfg",
 isb: "interiors.png_passthrough-bridges.cfg",
+ibw: "interior-background.png_STP_back_wall.cfg",
 
 
 ## CEMENT BASEMENT
