Some energy shot sounds, wiring one in for the moth boss homing shot.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -615,7 +615,11 @@ object_type: [
 			multiplier_y: "sin(lib.math.angle(me,target))",
 			my_angle: "lib.math.angle(me,target)",
 			target: "obj player_controlled :: level.player",
-
+			_sound_loop: {
+				type: "obj sound_source_individual_attache",
+				init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'moth-boss-energy-shot.wav', starts_with_sound_on: true})",
+				persistent: false,
+			},
 
 		},
 		on_create: "[add_particles('particles'),schedule(500,die())]",
