We don't know why adding another rear zorder caused blending on these to shit the bed, but for some reason, adding a blend mode fixes it and also improves the look a bit, besides.  Whatever works.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -436,7 +436,7 @@ iel,iel,iel",
 		preview: {
 			zorder: 0,
 			tiles: "ibw,ibw,ibw,
-					ibw,ibw,ibw
+					ibw,ibw,ibw,
 					ibw,ibw,ibw",
 		},
 	},
