--- a/data/objects/props/furniture/seaside_interior_window.cfg
+++ b/data/objects/props/furniture/seaside_interior_window.cfg
@@ -41,11 +41,16 @@ animation: {
 object_type: {
 	id: "lightstream",
 	zorder: "@include data/zorder.cfg:foreground_parallax_objects",
-	on_create: "[set(alpha, lib.math.round(225+sin(cycle+1d90)*25)), schedule(7+1d3, fire_event('create'))]",
+	on_create: "[
+		set(alpha, min(lib.math.round(55+sin(cycle+1d90)*25), 255)),
+		schedule(7+1d3, fire_event('create')),
+	]",
 	animation: {
 		id: "normal",
 		image: "tiles/lightstream.png",
 		rect: [0,0,31,79],
+		blend:["src_alpha","one"],
+		no_remove_alpha_borders: true,
 	},
 },
 }
