Established a few new palette entries, mostly for backfill wall material, and redid the new graphics in those palettes.

--- a/data/objects/props/seaside-interior/seaside_interior_woodwork_side_diagonal_interparallax_wall1.cfg
+++ b/data/objects/props/seaside-interior/seaside_interior_woodwork_side_diagonal_interparallax_wall1.cfg
@@ -28,7 +28,7 @@ animation: {
 	id: "normal",
 	image: "props/seaside-interior-woodwork.png",
 	rect: [0,0,111,191],
-	//palettes: "@include data/palettes.cfg:dungeon_palettes",
+	palettes: "@include data/palettes.cfg:interior_palettes",
 },
 
 }
