Ripped out the baked-in baseboard tiles in the seaside graphics, and made them standalone.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -400,6 +400,19 @@ iel,iel,iel",
 		},
 	},
 
+	#interior baseboards
+	{
+		category: "interior",
+		type: "ibb",
+		zorder: "interior_back_wall_decor",
+		preview: {
+			zorder: 0,
+			tiles: "   ,   ,   
+ibb,ibb,ibb
+   ,   ,   ",
+		},
+	},
+
 	#interior elevator shaft
 	{
 		category: "interior",
