Wired in a new horizontal support beam graphic for the seaside house interiors.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -352,7 +352,7 @@ pdm,pdm,pdm
 
 	# interior solid wall
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "int",
 		zorder: "interior_solid_ground_tiles",
 		preview: {
@@ -365,7 +365,7 @@ int,int,int",
 
 	# interior passthrough stairs/bridges
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "isb",
 		zorder: "interior_shelves_and_stairs",
 		preview: {
@@ -376,7 +376,7 @@ int,int,int",
 
 	#interior background wall
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "ins",
 		zorder: "interior_background_tiles",
 		preview: {
@@ -389,7 +389,7 @@ ins,ins,ins",
 
 	#interior elevator shaft
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "iel",
 		zorder: "elevator_shafts",
 		preview: {
@@ -402,20 +402,20 @@ iel,iel,iel",
 
 	#interior baseboards
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "ibb",
 		zorder: "interior_back_wall_decor",
 		preview: {
 			zorder: 0,
 			tiles: "   ,   ,   
-ibb,ibb,ibb
-   ,   ,   ",
+					ibb,ibb,ibb
+					   ,   ,   ",
 		},
 	},
 
 	#interior elevator shaft
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "ieh",
 		zorder: "elevator_shafts_horizontal",
 		preview: {
@@ -428,7 +428,7 @@ ibb,ibb,ibb
 
 	#interior background wooden support span
 	{
-		category: "interior",
+		category: "interior, seaside",
 		type: "iss",
 		zorder: "pillars",
 		preview: {
@@ -444,13 +444,27 @@ ibb,ibb,ibb
 	{
 		category: "interior, seaside",
 		type: "ibw",
-		zorder: "background_parallax_walls",
+		zorder: "background_parallax_walls_further",
 		x_speed: 105,
 		preview: {
 			zorder: 0,
 			tiles: "ibw,ibw,ibw,
 					ibw,ibw,ibw,
 					ibw,ibw,ibw",
+		},
+	},
+
+	#support beams, horizontal
+	{
+		category: "interior, seaside",
+		type: "ihb",
+		x_speed: 105,
+		zorder: "background_parallax_walls",
+		preview: {
+			zorder: 0,
+			tiles: "   ,   ,   
+				ihb,ihb,ihb
+				   ,   ,   ",
 		},
 	},
 
