--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -65,6 +65,7 @@ ieh: "interior-elevators.png_MTP_horizontal.cfg",
 isb: "interiors.png_passthrough-bridges.cfg",
 ibw: "interior-background.png_STP_back_wall.cfg",
 ibb: "interiors.png_STP_baseboard.cfg",
+ihb: "interior-background.png_MTP_horizonal_support_beam.cfg",
 
 
 ## CEMENT BASEMENT
