New tile definitions for an interior background parallax floor.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -193,8 +193,8 @@ dwl,dwl,dwl",
 		preview: {
 			zorder: 0,
 			tiles: ", , ,
- dpf,dpf,dpf
- , ,",
+				 dpf,dpf,dpf
+				 , ,",
 		},
 	},
 	{
@@ -465,6 +465,18 @@ iel,iel,iel",
 			tiles: "   ,   ,   
 				ihb,ihb,ihb
 				   ,   ,   ",
+		},
+	},
+	{
+		category: "interior, seaside",
+		type: "ipf",
+		zorder: "background_parallax_floors",
+		x_speed: 105,
+		preview: {
+			zorder: 0,
+			tiles: ", , ,
+				 ipf,ipf,ipf
+				 , ,",
 		},
 	},
 
