--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -66,6 +66,8 @@ isb: "interiors.png_passthrough-bridges.cfg",
 ibw: "interior-background.png_STP_back_wall.cfg",
 ibb: "interiors.png_STP_baseboard.cfg",
 ihb: "interior-background.png_MTP_horizonal_support_beam.cfg",
+ipf: "interior-parallax-floor.png.cfg",
+
 
 
 ## CEMENT BASEMENT
