Reworked the interior floor tiles to be horizontally slatted rather than vertical, due to parallax needs.

--- a/data/tiles/interior-parallax-floor.png.cfg
+++ b/data/tiles/interior-parallax-floor.png.cfg
@@ -1,10 +1,10 @@
 {
-palettes: "@include data/palettes.cfg:dungeon_palettes",
+palettes: "@include data/palettes.cfg:interior_palettes",
 tile_pattern: [
 
 	{
-		image: "tiles/dungeon-parallax-floor.png",
-		tiles: "00|01|02|03",
+		image: "tiles/interior-parallax-floor.png",
+		tiles: "00|01|02|03", //
 		pattern: " 	 .*   ,	 .* , .*
 					 .*   ,(ipf), .*	 
 					 .*   ,  .* , .*",
