--- a/data/tiles/interiors.png_MTP_walls.cfg
+++ b/data/tiles/interiors.png_MTP_walls.cfg
@@ -596,6 +596,47 @@ multi_tile_pattern: [
 			tiles: "52",
 			solid: true,
 		},
+		alternative: [{
+			tile1: {
+				image: "tiles/interior.png",
+				tiles: "g0",
+			},
+			tile2: {
+				image: "tiles/interior.png",
+				tiles: "h0",
+				solid: true,
+			},
+		},{
+			tile1: {
+				image: "tiles/interior.png",
+				tiles: "g1",
+			},
+			tile2: {
+				image: "tiles/interior.png",
+				tiles: "h1",
+				solid: true,
+			},
+		},{
+			tile1: {
+				image: "tiles/interior.png",
+				tiles: "g2",
+			},
+			tile2: {
+				image: "tiles/interior.png",
+				tiles: "h2",
+				solid: true,
+			},
+		},{
+			tile1: {
+				image: "tiles/interior.png",
+				tiles: "g3",
+			},
+			tile2: {
+				image: "tiles/interior.png",
+				tiles: "h3",
+				solid: true,
+			},
+		}],
 	},
 	{
 		chance: 100,
