Added the beginnings of a new set of wooden beam tiles.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -479,6 +479,17 @@ iel,iel,iel",
 				 , ,",
 		},
 	},
+	{
+		category: "interior, seaside",
+		type: "ibm",
+		zorder: "interior_beams",
+		preview: {
+			zorder: 0,
+			tiles: ", , ,
+				 ibm,ibm,ibm
+				 , ,",
+		},
+	},
 
 
 /*-------------------------------------- forest house interiors (new) --------------------------------------*/
