--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -67,6 +67,7 @@ ibw: "interior-background.png_STP_back_wall.cfg",
 ibb: "interiors.png_STP_baseboard.cfg",
 ihb: "interior-background.png_MTP_horizonal_support_beam.cfg",
 ipf: "interior-parallax-floor.png.cfg",
+ibm: "interior.png_MTP_beams.cfg",
 
 
 
