--- a/data/zorder.cfg
+++ b/data/zorder.cfg
@@ -40,6 +40,7 @@
 "elevator_shafts":								-36,
 "elevator_shafts_horizontal":					-35,
 "interior_shelves_and_stairs":					-34,
+"interior_beams":								-33,
 
 
 "exterior_sand":								-28,			
