Added multiple shading tiles for the background plaster walls.  Added some support beam graphics.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -453,6 +453,30 @@ iel,iel,iel",
 					ibw,ibw,ibw",
 		},
 	},
+	{
+		category: "interior, seaside",
+		type: "ibx",
+		zorder: "background_parallax_walls_further",
+		x_speed: 105,
+		preview: {
+			zorder: 0,
+			tiles: "ibx,ibx,ibx,
+					ibx,ibx,ibx,
+					ibx,ibx,ibx",
+		},
+	},
+	{
+		category: "interior, seaside",
+		type: "iby",
+		zorder: "background_parallax_walls_further",
+		x_speed: 105,
+		preview: {
+			zorder: 0,
+			tiles: "iby,iby,iby,
+					iby,iby,iby,
+					iby,iby,iby",
+		},
+	},
 
 	#support beams, horizontal
 	{
