--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -64,6 +64,8 @@ iel: "interior-elevators.png_MTP.cfg",
 ieh: "interior-elevators.png_MTP_horizontal.cfg",
 isb: "interiors.png_passthrough-bridges.cfg",
 ibw: "interior-background.png_STP_back_wall.cfg",
+ibx: "interior-background.png_STP_back_wall.cfg",
+iby: "interior-background.png_STP_back_wall.cfg",
 ibb: "interiors.png_STP_baseboard.cfg",
 ihb: "interior-background.png_MTP_horizonal_support_beam.cfg",
 ipf: "interior-parallax-floor.png.cfg",
