--- a/data/tiles/interior-background.png_STP_back_wall.cfg
+++ b/data/tiles/interior-background.png_STP_back_wall.cfg
@@ -4,16 +4,54 @@ palettes: "@include data/palettes.cfg:interior_palettes",
 tile_pattern: [
 
 
-	#solid
+	{
+		image:"tiles/interior-background.png",
+		tiles:"0f|0g|0h|0i|1f|1g|1h|1i",
+		
+		pattern:"
+		(iby)?,(iby)?,(iby)?,
+		(iby)?,(iby) ,(iby)?,
+		(iby)?,(iby)?,(iby)?"
+	},
+	{
+		image:"tiles/interior-background.png",
+		tiles:"2f|2g|2h|2i|2j|2k|2l",
+		
+		pattern:"
+		(iby)?    ,(iby)?    ,(iby)?,
+		(iby)?    ,(iby)     ,(iby)?,
+		(iby|ibx)?,(iby|ibx)?,(iby|ibx)?"
+	},
+	
+	
+	{
+		image:"tiles/interior-background.png",
+		tiles:"07|08|09|0a|17|18|19|1a",
+		
+		pattern:"
+		(ibx|iby)?,(ibx|iby)?,(ibx|iby)?,
+		(ibx)?,(ibx) ,(ibx)?,
+		(ibx)?,(ibx)?,(ibx)?"
+	},
+	{
+		image:"tiles/interior-background.png",
+		tiles:"27|28|29|2a|2b|2c|2d",
+		
+		pattern:"
+		(ibx)?    ,(ibx)?    ,(ibx)?,
+		(ibx)?    ,(ibx)     ,(ibx)?,
+		(ibx|ibw)?,(ibx|ibw)?,(ibx|ibw)?"
+	},
 	{
 		image:"tiles/interior-background.png",
 		tiles:"00|01|02|03|04|05|10|11|12|13|14|15",
 		
 		pattern:"
-		(ibw)?,(ibw)?,(ibw)?,
+		(ibx|ibw)?,(ibx|ibw)?,(ibx|ibw)?,
 		(ibw)?,(ibw) ,(ibw)?,
 		(ibw)?,(ibw)?,(ibw)?"
 	},
+
 
 ]
 }
