Added some (royalty-free) sounds for some forest plants shooting projectiles.

--- a/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
@@ -19,7 +19,7 @@ properties: {
 	_flashcount: { type: "int", default: 0, persistent: false },
 },
 
-on_shoot: "[sound_falloff('pollen-shot.wav'),spawn('forest_shooting_plant_huge.big_shot', mid_x, mid_y, {velocity_x: 1d100-50, velocity_y: if(upside_down = 1, 1000, -1*(2000+1d1000))} )]",
+on_shoot: "[sound_falloff('forest-plant-huge-shoot.wav'),spawn('forest_shooting_plant_huge.big_shot', mid_x, mid_y, {velocity_x: 1d100-50, velocity_y: if(upside_down = 1, 1000, -1*(2000+1d1000))} )]",
 on_end_anim: "if(animation = 'normal', if(_firecount < 3, [add(_firecount, 1), animation('normal')], [set(_firecount,0),animation('flash')]))",
 on_end_fire_anim: "animation('normal')",
 on_end_flash_anim: "if(_flashcount < 3, [add(_flashcount, 1), animation('flash')], [set(_flashcount,0),animation('fire')])",
@@ -85,7 +85,7 @@ object_type: [
 			track_player: "[add(velocity_x, hp_factor * 150 * cos(player_angle)), add(velocity_y, hp_factor * 30 * sin(player_angle))]",
 			last_collided_level: { type: "int", default: -10 },
 			
-			spawn_little_shot: "spawn('forest_shooting_plant_huge.shot', mid_x, mid_y, {velocity_x: 1d400-200, velocity_y: -400-1d200} )",
+			spawn_little_shot: "[sound_falloff('forest-plant-shot-splinter.wav'),spawn('forest_shooting_plant_huge.shot', mid_x, mid_y, {velocity_x: 1d400-200, velocity_y: -400-1d200} )]",
 
 			death_effects: "def(string type) -> commands [
 				spawn('forest_shooting_plant_wallmounted.flash', {
