--- a/data/objects/enemies/plants/forest_shooting_plant_wallmounted.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_wallmounted.cfg
@@ -16,7 +16,7 @@ properties: {
 	_flashcount: { type: "int", default: 0, persistent: false },
 },
 
-on_shoot: "spawn('forest_shooting_plant_wallmounted.shot', midpoint_x + 40*facing, midpoint_y, facing, [set(child.velocity_x,500*facing)]  )",
+on_shoot: "[sound_falloff('forest-plant-shoot.wav'),spawn('forest_shooting_plant_wallmounted.shot', midpoint_x + 40*facing, midpoint_y, facing, [set(child.velocity_x,500*facing)]]  )",
 on_end_anim: "if(animation = 'normal', if(_firecount < 3, [add(_firecount, 1), animation('normal')], [set(_firecount,0),animation('flash')]))",
 on_end_fire_anim: "animation('normal')",
 on_end_flash_anim: "if(_flashcount < 3, [add(_flashcount, 1), animation('flash')], [set(_flashcount,0),animation('fire')])",
