--- a/data/objects/enemies/plants/white_swaying_flower.cfg
+++ b/data/objects/enemies/plants/white_swaying_flower.cfg
@@ -156,6 +156,7 @@ object_type: [{
 	},
 
 	on_create: "[
+		sound_falloff('white-swaying-flower-shot.wav'),
 		schedule(300,force_death()),
 		spawn('forest_shooting_plant_wallmounted.flash', {
 			x: mid_x,
