--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1731,7 +1731,7 @@ properties: {
 	tongue_length: "int <- 8 + number_of_item(enum item_tongue_extension)*4",
 	tongue_duration: "int <- 24",
 	spit_power: "65",
-	posthit_invicibility_period: "50",
+	posthit_invicibility_period: "if(higher_difficulty, 50, 80)",
 	
 	jump_out_of_water_boost: "1120",
 	jump_out_of_water_boost_horizontal: "160",
