Fixed a bad tile pattern on crevice-village-house-2.cfg.
Originally [reported](https://discord.com/channels/225816341737766912/920412269718953994/1307803290796425346) by Luka116. Fixed with help from laser.

--- a/data/level/Seaside/crevice-village-house-2.cfg
+++ b/data/level/Seaside/crevice-village-house-2.cfg
@@ -21,6 +21,12 @@
 			"custom": true,
 			"is_human": true,
 			"label": "_22f9134b",
+			"property_data": {
+				"stored_events": {
+					"crevice_village_basement_house_fireplace_burning": 1,
+					"started_game": 1
+				}
+			},
 			"type": "frogatto_playable",
 			"x": 576,
 			"y": 448
@@ -56,7 +62,7 @@
 		{
 			"_uuid": "8aba5b0e4b9547e3980a5e45ba866af4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5092ca79482022",
 			"type": "kitty_spear",
 			"x": 160,
@@ -166,10 +172,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7d9ae226",
-			"type": "wooden_shelves_big_books2",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books2",
 			"x": 352,
 			"y": -1664
 		},
@@ -259,10 +265,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_70bc5615",
-			"type": "wooden_shelves_big_books3",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books3",
 			"x": 530,
 			"y": -2016
 		},
@@ -392,10 +398,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_61bccf7a",
-			"type": "wooden_shelves_big_books",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books",
 			"x": 480,
 			"y": -960
 		},
@@ -405,10 +411,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_66982475",
-			"type": "wooden_shelves_big_books3",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books3",
 			"x": 352,
 			"y": -960
 		},
@@ -438,10 +444,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_731ce3de",
-			"type": "wooden_shelves_big_books2",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books2",
 			"x": 288,
 			"y": -640
 		},
@@ -491,10 +497,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_6e563b3b",
-			"type": "wooden_shelves_big_books",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books",
 			"x": -1024,
 			"y": 64
 		},
@@ -504,10 +510,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_5f4ad714",
-			"type": "wooden_shelves_big_books2",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books2",
 			"x": -896,
 			"y": 64
 		},
@@ -537,10 +543,10 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_7cf4890e",
-			"type": "wooden_shelves_big_books3",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books3",
 			"x": -1024,
 			"y": -224
 		},
@@ -834,10 +840,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_11836230",
-			"type": "wooden_shelves_big_books3",
 			"on_talk": "speech_dialog(
 			set(level.player.animation, 'emote_raisedfinger'),
 			level.player, [~This seems like a\\nbad time to read.~])",
+			"type": "wooden_shelves_big_books3",
 			"x": -128,
 			"y": 352
 		},
@@ -1231,10 +1237,10 @@
 			"y": 169
 		}
 	],
-	"dimensions": [-1440,-2592,1507,1738],
+	"dimensions": [-1440,-2592,1503,1738],
 	"id": "crevice-village-house-2.cfg",
 	"music": "8bitness.ogg",
-	"palettes": ["interior_seaside_rustic","chrome_to_brass"],
+	"palettes": ["chrome_to_brass","interior_seaside_rustic"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
@@ -1391,10 +1397,10 @@ ins,ins,ins,ins,ins,ins,ins,ins,ins,ins,ins,ins,,,,,,,,,,,ins,ins,ins,ins,ins,in
 			"zorder": "interior_background_tiles"
 		},
 		{
-			"tiles": ",,,,,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
-,,,,,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
-,,,,,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
-,,,,,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
+			"tiles": "int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
+int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
+int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
+int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
 int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
 int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
 int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int,int
