Fixed the markup for the new sound loop on the moth boss.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -622,7 +622,7 @@ object_type: [
 			},
 
 		},
-		on_create: "[add_particles('particles'),schedule(500,die())]",
+		on_create: "[add_particles('particles'), add_object(_sound_loop), schedule(500,die())]",
 		on_end_anim: "animation('normal')",
 		on_process: "[
 						set(velocity_x, median(-speed, velocity_x*decay + multiplier_x*speed*accel_speed, speed)),
