--- a/data/object_prototypes/general/sound_source.cfg
+++ b/data/object_prototypes/general/sound_source.cfg
@@ -273,6 +273,11 @@ properties: {
 			distance_attenuation_function: "@eval enum inverse",
 			falloff_distance: 600,
 		},
+		'moth-boss-energy-shot.wav': {
+			sound_volume_max: 0.65,
+			distance_attenuation_function: "@eval enum linearly",
+			falloff_distance: 600,
+		},
 		
 	}, set: "null /*cannot set this, is immutable!*/" },
 	
