Tenative fix for being able to toggle abilities whilst a dialogue is open.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1952,18 +1952,20 @@ on_process: "[
 	if(not mana_shock_active, add(mana, mana_regen_per_frame)),
 	use_mana_cooldowns(),
 	
-	if(ctrl_keyboard(get_key_for_input(enum button_toggle_attack_left)) = 1,
-		toggle_ability(enum left)
-	),
-	if(ctrl_keyboard(get_key_for_input(enum button_toggle_attack_right)) = 1,
-		toggle_ability(enum right)	
-	),
-	if(ctrl_keyboard(get_key_for_input(enum button_toggle_item_left)) = 1,
-		toggle_secondary_item(enum left)	
-	),
-	if(ctrl_keyboard(get_key_for_input(enum button_toggle_item_right)) = 1,
-		toggle_secondary_item(enum right)	
-	),
+	if(should_display_hud_now, [
+		if(ctrl_keyboard(get_key_for_input(enum button_toggle_attack_left)) = 1,
+			toggle_ability(enum left)
+		),
+		if(ctrl_keyboard(get_key_for_input(enum button_toggle_attack_right)) = 1,
+			toggle_ability(enum right)	
+		),
+		if(ctrl_keyboard(get_key_for_input(enum button_toggle_item_left)) = 1,
+			toggle_secondary_item(enum left)	
+		),
+		if(ctrl_keyboard(get_key_for_input(enum button_toggle_item_right)) = 1,
+			toggle_secondary_item(enum right)	
+		),
+	]),
 	
 	_track_keys(),
 	if(ctrl_keyboard(get_key_for_input(enum button_open_inventory)) = 1 
