Toned down sound for shots from forest_shooting_plant_huge splintering, and added sounds for the projectiles despawning.

--- a/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
@@ -87,7 +87,7 @@ object_type: [
 			
 			spawn_little_shot: "[sound_falloff('forest-plant-shot-splinter.wav'),spawn('forest_shooting_plant_huge.shot', mid_x, mid_y, {velocity_x: 1d400-200, velocity_y: -400-1d200} )]",
 
-			death_effects: "def(string type) -> commands [
+			death_effects: "def(string type) -> commands [sound_falloff('forest-plant-shot-dissipate.wav'),
 				spawn('forest_shooting_plant_wallmounted.flash', {
 					x: mid_x,
 					y: mid_y,
