Revert theme-room music to 1.3

--- a/data/level/Dungeon/milgrams-throne-room.cfg
+++ b/data/level/Dungeon/milgrams-throne-room.cfg
@@ -150,7 +150,7 @@
 					level.player,	[~Hi, I'm Frogatto.~],
 									set(me.animation, 'alert'),
 					me,				[~Help!~]),
-									lib.audio.play_music(me,'MilgramChamber.ogg'),
+									lib.audio.play_music(me,'MilgramChamber-old.ogg'),
 
 				set(level.player.control_lock, ['ctrl_right']),
 				schedule(25, set(level.player.control_lock, [])),
