change swamp ambush theme from default

--- a/data/level/Forest/caustic-cauchemar.cfg
+++ b/data/level/Forest/caustic-cauchemar.cfg
@@ -24,7 +24,7 @@
 	            	set(custom_storage['former_level_x2'], l_dim[2]),
 	            	set(level.dimensions, [832, l_dim[1], 2178, l_dim[3]]),
 	            	
-	            	lib.audio.play_music(me,'Frogatto_Boss_Mischievy2.ogg'),
+	            	lib.audio.play_music(me,'MushroomMetal2.ogg'),
 	            	title(~Boo!~),
 					set_solid(800, -1216, 832, -1056, true),
 					set_solid(2178, -1760, 2240, -1376, true),
