implement unused FrogForest.ogg in two forest levels

--- a/data/level/Forest/forgotten-falls.cfg
+++ b/data/level/Forest/forgotten-falls.cfg
@@ -3784,7 +3784,7 @@
 	],
 	"dimensions": [-1280,-4992,11839,1247],
 	"id": "forgotten-falls.cfg",
-	"music": "TemplateFrogFinal.ogg",
+	"music": "FrogForest.ogg",
 	"next_level": "glowing-gate.cfg",
 	"palettes": ["forest_graveyard_shift"],
 	"preloads": "",
