--- a/data/level/Forest/glowing-gate.cfg
+++ b/data/level/Forest/glowing-gate.cfg
@@ -3728,7 +3728,7 @@
 	],
 	"dimensions": [-480,-1504,6399,1535],
 	"id": "glowing-gate.cfg",
-	"music": "TheGrotto.ogg",
+	"music": "FrogForest.ogg",
 	"next_level": "perilous-precipice.cfg",
 	"palettes": ["forest_graveyard_shift"],
 	"preloads": "",
