Fixed an issue where Berd's conversation was broken when you left the level and came back after he landed; this was because we were (wtf?) spawning an empty npc copy of him for that version of the event, rather than using the deserialized version that has his conversation attached.

--- a/data/level/Seaside/crevice-village.cfg
+++ b/data/level/Seaside/crevice-village.cfg
@@ -83,9 +83,16 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "create_berd_script",
-			"on_start_level": "if(level.player.get_stored_event('berds_crevice_village_cave_landing') and 
-						(not level.player.get_stored_event('berds_crevice_village_cave_speech')),
-								[spawn('berd_npc',-237,226,-1,[set(child.turning_behaviour, 'face_player')]),fire_event('dialog_1'), die()])",
+			"on_start_level": "if(
+				level.player.get_stored_event('berds_crevice_village_cave_landing') and 
+				(not level.player.get_stored_event('berds_crevice_village_cave_speech')),
+					[
+						set(berd.start_mode, 'stand'),
+						set(berd.mid_xy, [-290, 200]),
+						add_object(berd),
+						die()
+					]
+			) where berd = (obj berd_npc <- custom_storage['berd_npc'])",
 			"on_triggered": "(if(not level.player.get_stored_event('berds_crevice_village_cave_speech'),
 						[level.player.store_event('berds_crevice_village_cave_landing',1),
 						add_object(berd),
